--- a/src/Game.css
+++ b/src/Game.css
@@ -1,29 +1,14 @@
-.App {
+.Game {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.react-logo {
+  animation: react-logo-spin infinite 10s linear;
+  height: 5vmin;
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes react-logo-spin {
   from {
     transform: rotate(0deg);
   }
